WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201882
WebSWContextManagerConnection::installServiceWorker IPC no longer need a sessionID
https://bugs.webkit.org/show_bug.cgi?id=201882
Summary
WebSWContextManagerConnection::installServiceWorker IPC no longer need a sess...
Chris Dumez
Reported
2019-09-17 13:59:43 PDT
WebSWContextManagerConnection::installServiceWorker IPC no longer need a sessionID, now that we have a sessionID per WebProcess.
Attachments
Patch
(17.04 KB, patch)
2019-09-17 14:15 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(17.04 KB, patch)
2019-09-17 15:02 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.37 KB, patch)
2019-09-18 11:43 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-17 14:15:07 PDT
Created
attachment 378988
[details]
Patch
Chris Dumez
Comment 2
2019-09-17 15:02:16 PDT
Created
attachment 378995
[details]
Patch
Chris Dumez
Comment 3
2019-09-18 09:56:51 PDT
Patch is ready for review.
Geoffrey Garen
Comment 4
2019-09-18 11:03:33 PDT
Comment on
attachment 378995
[details]
Patch r=me
Chris Dumez
Comment 5
2019-09-18 11:43:13 PDT
Created
attachment 379052
[details]
Patch
Chris Dumez
Comment 6
2019-09-18 11:47:07 PDT
Comment on
attachment 379052
[details]
Patch Clearing flags on attachment: 379052 Committed
r250047
: <
https://trac.webkit.org/changeset/250047
>
Chris Dumez
Comment 7
2019-09-18 11:47:09 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2019-09-18 11:48:15 PDT
<
rdar://problem/55486817
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug